--- a/ansible_test/roles/sudoers/defaults/main.yml
+++ b/ansible_test/roles/sudoers/defaults/main.yml
@@ -1108,6 +1108,12 @@ product:
     group: "staff"
 
 supportengg:
+
+  - name: "Kitu"
+    username: "Kantha_10001"
+    emp_id: "10001"
+    group: "staff"
+
   - name: "shashank"
     username: "shashank_21097"
     emp_id: "21097"
