--- a/ansible_test/roles/sudoers/defaults/main.yml
+++ b/ansible_test/roles/sudoers/defaults/main.yml
@@ -1195,6 +1195,12 @@ supportengg:
 
 forex:
 
+  - name: "DEEPIIIIKA"
+    username: "Deepi_10001"
+    emp_id: "10001"
+    group: "staff"
+
+
   - name: "Vishal Arora"
     username: "vishal_18766"
     emp_id: "18766"
