--- a/ansible_test/roles/sudoers/defaults/main.yml
+++ b/ansible_test/roles/sudoers/defaults/main.yml
@@ -1270,6 +1270,13 @@ tempaccess:
     group: "staff"
 
 trainsnilgiri:
+
+  - name: "Paapukutty"
+    username: "Deepi_10001"
+    emp_id: "10001"
+    group: "staff"
+meenu
+
   - name: "Trains Nilgiri"
     username: "trains_12345"
     emp_id: "12345"
