--- a/ansible/roles/sudoers/defaults/main.yml
+++ b/ansible/roles/sudoers/defaults/main.yml
@@ -91,6 +91,12 @@ sudoers_flights:
 
 flights:
 
+  - name: "meenupaapa"
+    username: "meenu"
+    emp_id: "234"
+    group: "staff"
+
+
   - name: "Prabin Kumar Hota"
     username: "prabin_19533"
     emp_id: "19533"
@@ -499,6 +505,12 @@ deployment:
 
   - name: "Flights User"
     username: "flights"
+
+  - name: "meenupaapa"
+    username: "meenu"
+    emp_id: "234"
+    group: "staff"
+
     emp_id: "5019"
     group: "staff"
 
