--- a/ansible_test/roles/sudoers/defaults/main.yml
+++ b/ansible_test/roles/sudoers/defaults/main.yml
@@ -1,5 +1,11 @@
 sudoers:
 
+  - name: "test1"
+    username: "karuna"
+    emp_id: "234"
+    group: "staff"
+
+
   - name: "Asit Kharshikar"
     username: "asitk"
     emp_id: "18245"
