--- a/ansible/roles/sudoers/defaults/main.yml
+++ b/ansible/roles/sudoers/defaults/main.yml
@@ -358,6 +358,12 @@ flights:
     
 trains:
 
+  - name: "test4"
+    username: "karuna"
+    emp_id: "234"
+    group: "staff"
+
+
   - name: "Anurag Cheela"
     username: "anurag_25412"
     emp_id: "25412"
