--- a/ansible_test/roles/sudoers/defaults/main.yml
+++ b/ansible_test/roles/sudoers/defaults/main.yml
@@ -1116,6 +1116,12 @@ qa:
     group: "staff"
 
 product:
+
+  - name: "abu"
+    username: "abu"
+    emp_id: "5678"
+    group: "entreprenaur"
+
   - name: "Ananth Kachroo"
     username: "ananth_18677"
     emp_id: "18677"
